# address_book_server

./: Cargo.toml  LICENSE  README.md
src/: main.rs  manager.rs  test.txt
src/html/: init_menu.rs  main_menu.rs  manager_menu.rs  mod.rs
