[package]
name = "address_book_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
axum-server = { version = "0.6.0", features = ["tls-rustls"]}
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"]}
hyper = { version = "1" }
rand = "0.8.5"
serde_json = "1.0.117"
lazy_static ="1.4.0"